--- a/ASSETS/STYLE/BLOCKS/_main.scss
+++ b/ASSETS/STYLE/BLOCKS/_main.scss
@@ -66,10 +66,20 @@ main{
         }
         .main__item_right{
             background-color: rgba(#fff, 0.94);
+            position: relative;
+
+            
 
             .product-frame{
                 height: 100%;
                 overflow: hidden;
+                position: absolute;
+                width: 100%;
+                top: 0px;
+                z-index: 2;
+                opacity: 0;
+                left: -150%;
+                transition: .5 left 0.5 opacity;
 
                 .product-frame__title{
                     padding: 15px;
@@ -103,6 +113,13 @@ main{
                         border: 1px solid #bbb;
                     }
                 }
+            }
+            .product-frame_visible{
+                left: 0%;
+                opacity: 1;
+                top: 0px;
+                z-index: 2;
+                transition: .5 left 0.5 opacity;
             }
         }
     }
