--- a/ASSETS/STYLE/BLOCKS/_main.scss
+++ b/ASSETS/STYLE/BLOCKS/_main.scss
@@ -1,7 +1,7 @@
 $NAV_HEIGHT: 50px;
 
 main{
-    width: 60%;
+    width: 1100px;
     height: 600px;
     position: relative;
     left: 50%;
@@ -17,20 +17,27 @@ main{
         grid-template-columns: 25% auto;
 
         .main__item{
-            padding: 15px;
+            padding-top: 15px;
         }
         .main__item_left{
             background-color: rgba(#fff, 0.98);
             padding-top: 70px;
+            z-index: 3;
             
-
+            .main__nav-item_active{
+                background-color: #f2f2f2;
+                transition: .2s background-color;
+            }
             .main__nav-item{
                 display: grid;
                 grid-template-columns: 64px auto;
                 width: 100%;
+                transition: .2s background-color;
+                
 
                 &:hover{
-                    background-color: #eee;
+                    background-color: #ddd;
+                    transition: .2s background-color;
                 }
 
                 .nav-item__ico_landing{
@@ -56,6 +63,7 @@ main{
                 .nav-item__text{
                     display: inline-block;
                     text-align: left;
+                    color: black;
                     line-height: $NAV_HEIGHT;
                     font-size: 20px;
                     padding-left: 20px;
@@ -68,8 +76,6 @@ main{
             background-color: rgba(#fff, 0.94);
             position: relative;
 
-            
-
             .product-frame{
                 height: 100%;
                 overflow: hidden;
@@ -79,7 +85,7 @@ main{
                 z-index: 2;
                 opacity: 0;
                 left: -150%;
-                transition: .5 left 0.5 opacity;
+                transition: 0.5s all;
 
                 .product-frame__title{
                     padding: 15px;
@@ -92,6 +98,7 @@ main{
                     display: grid;
                     row-gap: 10%;
                     column-gap: 5%;
+                    padding-left: 15px;
                     grid-template-columns: repeat(4, 1fr);
 
                     >a{
@@ -119,7 +126,7 @@ main{
                 opacity: 1;
                 top: 0px;
                 z-index: 2;
-                transition: .5 left 0.5 opacity;
+                transition: 0.5s all;
             }
         }
     }
