--- a/ASSETS/STYLE/BLOCKS/_main.scss
+++ b/ASSETS/STYLE/BLOCKS/_main.scss
@@ -101,23 +101,39 @@ main{
                     padding-left: 15px;
                     grid-template-columns: repeat(4, 1fr);
 
+                    
+
                     >a{
                         display: inline-block;
                         width: 150px;
-                        height: 170px;
-                    
-                        >img{
-                            transition: 0.5s box-shadow;
+                        
+                        img{
+                            border: 1px solid #DDD;
+                            transition: 0.5s border;
+                            &:hover{
+                                border: 1px solid #555;
+                                transition: 0.5s border;
+                            }
                         }
-                        >img:hover{
-                            box-shadow: 0px 0px 10px #aaa;
-                            transition: 0.5s box-shadow;
-                        }
+
+                        
+                        
 
                     }
 
                     .site__preview{
                         border: 1px solid #bbb;
+                    }
+                    .site__title{
+                        text-align: center;
+                        font-size: 16px;
+                        display: block;
+                        color: #333;
+                        transition: 0.2s color;
+                        &:hover{
+                            color: #000;
+                            transition: 0.2s color;
+                        }
                     }
                 }
             }
