--- a/ASSETS/STYLE/BLOCKS/_main.scss
+++ b/ASSETS/STYLE/BLOCKS/_main.scss
@@ -1,7 +1,7 @@
 $NAV_HEIGHT: 50px;
 
 main{
-    width: 1100px;
+    width: 1024px;
     height: 600px;
     position: relative;
     left: 50%;
@@ -115,10 +115,6 @@ main{
                                 transition: 0.5s border;
                             }
                         }
-
-                        
-                        
-
                     }
 
                     .site__preview{
@@ -143,6 +139,31 @@ main{
                 top: 0px;
                 z-index: 2;
                 transition: 0.5s all;
+            }
+        }
+    }
+}
+@media (max-width: 1024px){
+    main{
+        width: 768px;
+        #main__grid{
+            .main__item_left{
+                .main__nav-item{
+                    .nav-item__text{
+                        padding-left: 0px;
+                    }
+                }
+            }
+            .main__item_right{
+                .product-frame{
+                    .product-frame__grid{
+                        display: grid;
+                        row-gap: 5%;
+                        column-gap: 5%;
+                        padding-left: 15px;
+                        grid-template-columns: repeat(3, 1fr);
+                    }
+                }
             }
         }
     }
