--- a/ASSETS/STYLE/BLOCKS/_wrapper.scss
+++ b/ASSETS/STYLE/BLOCKS/_wrapper.scss
@@ -1,6 +1,8 @@
 #wrapper{
     background-image: url("ASSETS/IMG/wrapper-bg.jpg");
+    background-size: cover;
     height: 100vh;
+    width: 100vw;
     display: grid;
     grid-template-rows: 50px auto 50px;
 }
