--- a/ASSETS/STYLE/BLOCKS/_footer.scss
+++ b/ASSETS/STYLE/BLOCKS/_footer.scss
@@ -5,4 +5,13 @@ footer{
     color: #fff;
     font-size: 20px;
     line-height: 50px;
+    position: absolute;
+    bottom: 0px;
+    transition: 1s bottom;
+}
+@media (max-height: 700px){
+    footer{
+        bottom: -100px;
+        transition: 1s bottom;
+    }
 }
