--- a/ASSETS/STYLE/BLOCKS/_social.scss
+++ b/ASSETS/STYLE/BLOCKS/_social.scss
@@ -3,6 +3,7 @@
     position: relative;
     top: 50%;
     left: 80px;
+    transition: 1s all;
 
     >a{
         color: #fff;
@@ -15,6 +16,30 @@
         }
         &:hover{
             filter: brightness(0.8);
+        }
+    }
+}
+@media (max-width: 768px){
+    #social{
+        display: inline-block;
+        position: relative;
+        top: 50%;
+        left: 50%;
+        transform: translateX(-50%);
+        transition: 1s all;
+    
+        >a{
+            color: #fff;
+            text-decoration: none;
+            font-size: 18px;
+            margin-right: 15px;
+    
+            &:last-child{
+                margin-right: 0px;
+            }
+            &:hover{
+                filter: brightness(0.8);
+            }
         }
     }
 }
